# routes/register.js
@@ -2,7 +2,7 @@ const express = require("express");
 const router = express.Router();
 const userController = require("../controllers/userController");
 
-router.get('/', (req, res) => res.render('login'));
-router.post('/', userController.login);
+router.get('/', (req, res) => res.render('register'));
+router.post('/', userController.register);
 
 module.exports = router;
